--- a/index.org
+++ b/index.org
@@ -570,6 +570,38 @@ If the newly discoved room has an event in it, the player must stop moving and a
           raise KeyError
 
 
+  def discover(coordnate, direction):
+      def only_correct_floor():
+          #Really this only needs to be here
+          room = ROOM_LIST.pop()
+          if coordnate[2] in room.allowed_floors:
+              return room
+          else:
+              ROOM_LIST.append(room)
+              return None
+          return None
+
+      def can_place_room_on_floor():
+          #Check that it is possible to set a room on this floor
+          can = [coordnate[2] in room.allowed_floors for room in ROOM_LIST]
+          return True in can
+
+      spawned_room = None
+      if can_place_room_on_floor:
+          while spawned_room == None:
+              only_correct_floor()
+              continue
+          spawn_room(coordnate,spawned_room)
+          MAP[coordnate].set_coordnate(coordnate)
+          MAP[coordnate].set_edges()
+          MAP[coordnate].set_connections()
+          return None
+      else:
+          print("Error!: There are no rooms that can be placed on this floor!!")
+          return "ERROR!"
+
+
+
 
 
 #+END_SRC
@@ -701,6 +733,49 @@ If the newly discoved room has an event in it, the player must stop moving and a
               edges[2]['direction'], 'west')
           self.assertEqual(
               edges[3]['direction'], 'north')
+
+
+      def test_room_list_has_rooms(self):
+          self.assertNotEqual(house.ROOM_LIST, [],
+                              "ROOM_LIST is empty!!")
+
+
+      """
+      def test_can_not_put_room_on_wrong_floor(self):
+          room_list_copy = list(house.ROOM_LIST)
+          house.ROOM_LIST = [house.Room(
+              "Evil Room!",
+              (False,False,False,False),
+              (1,2,3))]
+          self.pos = house.MAP[(0,0,0)]
+          discover_room = house.discover((1,0,0),None)
+          self.assertEqual(discover_room, "ERROR!")
+          house.ROOM_LIST = room_list_copy
+   
+
+      def test_discovered_room_has_coordnate(self):
+          room_list_copy = list(house.ROOM_LIST)
+          house.ROOM_LIST = [house.Room(
+              "Test Room",
+              (True,True,True,True),
+              (-1,0,1))]
+          house.discover((-1,0,0),None)
+          self.assertNotEqual(house.MAP[(-1,0,0)].x, None)
+          house.ROOM_LIST = room_list_copy
+
+      def test_discovered_room_has_edges(self):
+          room_list_copy = list(house.ROOM_LIST)
+          house.ROOM_LIST = [house.Room(
+              "Test Room",
+              (True,True,True,True),
+              (-1,0,1))]
+          house.discover((-2,0,0),None)
+          for edge in house.MAP[(-2,0,0)].edges:
+              self.assertNotEqual(edge,None)
+
+          house.ROOM_LIST = room_list_copy
+
+      """
 #+END_SRC
 
 #+BEGIN_SRC sh
